<resources>
    <string name="app_name">Music_50</string>
    <string name="tab_home">Home</string>
    <string name="tab_audio">Audio</string>
    <string name="tab_search">Search</string>
    <string name="tab_library">Library</string>
    <string name="trending_music">Trending</string>
    <string name="genres_text">Genres</string>
    <string name="trending_music_item_ratio">3:2.2</string>
    <string name="image_description">description</string>
    <string name="genre_item_dimension_ratio">1:1</string>
    <string name="dimension_ratio_1_1">1:1</string>
    <string name="shuffle_play">Shuffle Play</string>
    <string name="loop_one">1</string>
    <string name="default_duration">00:00</string>
    <string name="view_scale_value">0.8</string>
    <string name="view_scale_default_value">1</string>
    <string name="question_symbol">\?</string>
    <string name="find_your_music">Find your music !</string>
    <string name="search_hint">Song name…</string>
</resources>
