<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConstraintSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.framgia.music_50.screen.search.SearchFragment"
    >
    <TextView
        android:id="@+id/textViewSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/tab_search"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/edit_text_search_bg"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingBottom="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_12"
        android:singleLine="true"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchTitle"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSearchResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSearch"
        app:layout_constraintVertical_bias="1.0"
        />
    <TextView
        android:id="@+id/textViewEmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/find_your_music"
        android:textColor="@color/color_grey_50"
        app:layout_constraintEnd_toEndOf="@+id/imageViewEmptyResult"
        app:layout_constraintStart_toStartOf="@+id/imageViewEmptyResult"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmptyResult"
        />
    <ImageView
        android:id="@+id/imageViewEmptyResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="@string/dimension_ratio_1_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        />
    <android.support.constraint.Group
        android:id="@+id/groupSearchText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="imageViewEmptyResult,textViewEmptyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/imageViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_tab_search"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSearch"
        app:layout_constraintEnd_toEndOf="@+id/editTextSearch"
        app:layout_constraintTop_toTopOf="@+id/editTextSearch"
        />
</android.support.constraint.ConstraintLayout>
