<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="com.framgia.music_50.screen.play.PlayActivity"
    >
    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_16"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        />
    <ImageView
        android:id="@+id/imageViewPlayPause"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_8"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewSkipNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewSkipPrevious"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTrack"
        app:srcCompat="@drawable/ic_rounded_play"
        />
    <ImageView
        android:id="@+id/imageViewSkipNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_8"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlayPause"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLoop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayPause"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayPause"
        app:srcCompat="@drawable/ic_skip_next"
        />
    <ImageView
        android:id="@+id/imageViewSkipPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_8"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlayPause"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPlayPause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewShuffle"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayPause"
        app:srcCompat="@drawable/ic_skip_previous"
        />
    <ImageView
        android:id="@+id/imageViewLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_8"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSkipNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewSkipNext"
        app:layout_constraintTop_toTopOf="@+id/imageViewSkipNext"
        app:srcCompat="@drawable/ic_loop"
        />
    <ImageView
        android:id="@+id/imageViewShuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_8"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSkipPrevious"
        app:layout_constraintEnd_toStartOf="@+id/imageViewSkipPrevious"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewSkipPrevious"
        app:srcCompat="@drawable/ic_shuffle_disable"
        />
    <SeekBar
        android:id="@+id/seekBarTrack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:progressBackgroundTint="@android:color/white"
        android:progressTint="@color/amber_500"
        android:thumbTint="@color/amber_500"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPlayPause"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCurrentDuration"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        />
    <TextView
        android:id="@+id/textViewCurrentDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/default_duration"
        android:textColor="@color/color_grey_300"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarTrack"
        app:layout_constraintEnd_toStartOf="@+id/seekBarTrack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarTrack"
        />
    <TextView
        android:id="@+id/textViewTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:textColor="@color/color_grey_300"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBarTrack"
        app:layout_constraintTop_toTopOf="@+id/seekBarTrack"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        app:layout_constraintWidth_default="percent"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/cardViewArtwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_8"
        app:layout_constraintDimensionRatio="@string/dimension_ratio_1_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack"
        app:layout_constraintWidth_percent="0.45"
        >
        <ImageView
            android:id="@+id/imageViewArtwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            />
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textViewTrackTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewArtwork"
        />
    <TextView
        android:id="@+id/textViewArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/color_grey_300"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/textViewTrackTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTrackTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTrackTitle"
        />
    <ImageView
        android:id="@+id/imageViewDownloadTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        android:focusable="true"
        android:padding="@dimen/dp_16"
        android:stateListAnimator="@animator/view_click_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download"
        />
    <TextView
        android:id="@+id/textViewLoopOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop_one"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_12"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLoop"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLoop"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoop"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoop"
        />
</android.support.constraint.ConstraintLayout>
